--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -24,3 +24,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/HW57")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/HW57")
 
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure=False
+
